// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly 1`] = `
<svg
  class="sk-flex-no-shrink sk-fill-current"
  height="18"
  id="Layer_1"
  viewBox="0 0 18 18"
  width="18"
>
  <path
    d="M4.4 10l3.3 3.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0l-5.1-5c-.4-.4-.4-1 0-1.4l5-5.1c.3-.1.5-.2.8-.2.3 0 .5.1.7.3.4.4.4 1 0 1.4L4.4 8H16c.6 0 1 .4 1 1s-.4 1-1 1H4.4z"
  />
</svg>
`;

exports[`Icon renders with additional classes 1`] = `
<svg
  class="sk-flex-no-shrink sk-fill-current extra-class"
  height="18"
  viewBox="0 0 18 18"
  width="18"
>
  <path
    d="M17 6H1c-.6 0-1 .4-1 1v10c0 .6.4 1 1 1h16c.6 0 1-.4 1-1V7c0-.6-.4-1-1-1zM2 16V8h14v8H2zM11.2 1H6.8C5.8 1 5 1.8 5 3v1c0 .6.4 1 1 1s1-.4 1-1V3h4v1c0 .6.4 1 1 1s1-.4 1-1V3c0-1.2-.8-2-1.8-2z"
  />
</svg>
`;
